[tool.poetry]
name = "level-5"
version = "0.1.0"
description = ""
authors = ["ts1lv3r <slvrgld7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bcrypt = "^4.1.2"
argon2-cffi = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
